# RustSem

./: Cargo.toml  Dockerfile  README.md  cleaned_data.csv
src/: data_analysis.rs  lib.rs  main.rs  plots.rs  show_predict.rs  web_app.rs
static/: index.html
