[package]
name = "rust_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
polars = { version = "0.45.1", features = ["csv", "lazy"] }
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ndarray nur, wenn du es brauchst – aber ohne linalg!
ndarray = "0.15"
csv = "1.2.0"
